# rust-imap-notifier

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/model/: config.rs  imap.rs  mod.rs
