[package]
name = "rust-imap-notifier"
version = "0.1.0"
authors = ["Michael van Niekerk <mvniekerk@gmail.com>"]
edition = "2018"

[dependencies]
notifica = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
imap = "1.0.1"
native-tls = "0.2.3"
corona = "0.4.1"
tokio = "0.1.19"